--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -20,8 +20,8 @@
 
     <h2><%= user.userName %> has <%= left %> things left to do.</h2>
 
-    <form action="/videos/createVideo" method='POST'>
-        <input type="text" placeholder="Enter Video ID" name='videoID'>
+    <form action="/todos/createTodo" method='POST'>
+        <input type="text" placeholder="Enter Todo Item" name='todoItem'>
         <input type="submit">
     </form>
 
