--- a/views/videos.ejs
+++ b/views/videos.ejs
@@ -4,26 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Video List</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Videos</h1>
+    <h1>Videos:</h1>
     <ul>
-    <% todos.forEach( el => { %>
-            <li class='todoItem' data-id='<%=el._id%>'>
-                <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.todo %></span>
-                <span class='del'> Delete </span>
-            </li>
-    <% }) %>    
+
     </ul>
 
-    <h2><%= user.userName %> has <%= left %> things left to do.</h2>
+    <h2>Something something</h2>
 
-    <form action="/videos/createVideo" method='POST'>
-        <input type="text" placeholder="Enter Video ID" name='videoID'>
+    <!-- <form action="/todos/createTodo" method='POST'>
+        <input type="text" placeholder="Enter Todo Item" name='todoItem'>
         <input type="submit">
-    </form>
+    </form> -->
 
     <a href="/logout">Logout</a>
 
