--- a/views/videos.ejs
+++ b/views/videos.ejs
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video List</title>
+    <meta name="description" content="Create your own Youtube watchlists!">
+    <meta name="keywords" content="youtube, list, authentication">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Lists</title>
+
+    <!-- external CSS links -->
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
