added data to videos.ejs

--- a/views/videos.ejs
+++ b/views/videos.ejs
@@ -20,22 +20,25 @@
         <button>Add</button>
     </form>
     <h1>Video List:</h1>
-    <section class="video-container">
-        <div class="video" id="whateverTheVideoId will be">
-            <h3 class="video__title">Video Title Here</h3>
-            <h4 class="video__channel">Channel Name here</h4>
-            <img class="video__thumbnail" src="#" alt="">
-            <p class="video__desc">Video Description</p>
-            <p class="video__metrics">Views:<span class="video__view-count">0</span></p>
-            <p class="video__metrics">Likes:<span class="video__like-count">1</span></p>
-            <p class="video__metrics">Comments:<span class="video__comment-count">2</span></p>
-            <p class="video__metrics">Published On:<span class="video__publish-date">Jan 1, 1920</span></p>
-            <h4>Video ID Here</h4>
-        </div>
-    </section>
+    <% data.forEach(video => {%>
+        <section class="video-container">
+            <div class="video" 
+                data-youtube-id="<%= video.YouTubeID%>" 
+                id="<%= video.userId%>">
+                <h3 class="video__title"><%= video.title%></h3>
+                <h4 class="video__channel"><%= video.channel%></h4>
+                <img class="video__thumbnail" src="<%= video.thumbnail%>" alt="">
+                <p class="video__desc"><%= video.description%></p>
+                <p class="video__metrics">Views:<span class="video__view-count"><%= video.views%></span></p>
+                <p class="video__metrics">Likes:<span class="video__like-count"><%= video.likes%></span></p>
+                <p class="video__metrics">Comments:<span class="video__comment-count"><%= video.commentCount%></span></p>
+                <p class="video__metrics">Published On:<span class="video__publish-date"><%= video.published%></span></p>
+            </div>
+        </section>
+    <% })%>
 
     <a href="/logout">Logout</a>
-
+    <%= data %>
     <script src="js/main.js"></script>
 </body>
 </html>
