--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,83 @@
+
+/********************************
+*   BASE STYLES
+********************************/
 * {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+}
+
+html {
+    font-size: 100%;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    background: #22242a;
 }
 
 h1{
-    color: red;
-
+    font-size: 2rem;
+    font-weight: 700;
+    /* margin-bottom: 1em; */
 }
+
+h2 {
+    font-size: 1.8rem;
+    /* margin-bottom: 1em; */
+}
+
+h3 {
+    font-size: 1.6rem;
+    /* margin-bottom: 1em; */
+}
+
+h4 {
+    font-size: 1.5rem;
+    /* margin-bottom: 1em; */
+}
+
+p {
+    line-height: 1.5em;
+    font-size: 1.1em;
+}
+
+button {
+    background: #262a31;
+    border: 1px solid #2a2e34;
+    padding: 0.6em 1.6em;
+    font-family: 'Roboto', sans-serif;  
+    font-size: 1.2em;
+    color:  #aeb6ca;
+    border-radius: 0.5em;
+    cursor: pointer;
+}
+
+/********************************
+*   BLOCK ELEMENTS
+********************************/
+.row {
+    display: flex;
+}
+
+.container {
+    width: min(1200px, 70%);
+    margin: 0 auto;
+}
+.header {
+    background: #1c1e22;
+    border-bottom: 1px solid #454a56;
+}
+
+
+.nav {
+    align-items: space-between;
+    padding: 1.2em 1em;
+    justify-content: flex-end;
+    gap: 2em;
+    align-items: center;
+}
+
 .completed{
     text-decoration: line-through;
     color: gray;
