--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Youtube Watch List</title>
+        <!-- font awesome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+        <!-- google fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    
+        <!-- external CSS links -->
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Create your very own Youtube watch list.</h1>
-    <a href="/login"> Login</a>
-    <a href="/signup"> Signup</a>
-    <a href="/videos"> Videos</a>
+    <div id ='index-page'>
+        <h1>Create your very own Youtube watch list.</h1>
+        <a href="/login" class='button'> Login</a>
+        <a href="/signup" class='button'> Signup</a>
+        <a href="/videos" class='button'> Videos</a>
+    </div>
+    
 </body>
 </html>
